[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Minecraftia-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://godot/Textbox.tres" type="StyleBox" id=4]
[ext_resource path="res://audio/sounds/talk11.wav" type="AudioStream" id=5]
[ext_resource path="res://audio/sounds/talk22.wav" type="AudioStream" id=6]
[ext_resource path="res://audio/music/underworld_music.wav" type="AudioStream" id=7]
[ext_resource path="res://scenes/Space.tscn" type="PackedScene" id=8]
[ext_resource path="res://scripts/Root.gd" type="Script" id=15]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="Animation" id=2]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 2, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 5
extra_spacing_bottom = -4
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=4]
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, -20.0 ]
}

[node name="Zelda" type="Node2D"]
pause_mode = 2
script = ExtResource( 15 )

[node name="Background" parent="." instance=ExtResource( 8 )]
pause_mode = 1
z_index = -1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="dark" type="Panel" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/dark"]
anims/default = SubResource( 2 )

[node name="Skip" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 8.0
margin_top = 8.0
margin_right = 120.0
margin_bottom = 27.0
size_flags_horizontal = 8
size_flags_vertical = 8
custom_fonts/font = SubResource( 3 )
text = "Skip? (Press ACTION again)"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Intro" type="Node2D" parent="."]

[node name="Label1" type="Label" parent="Intro"]
visible = false
margin_left = -120.0
margin_right = -8.0
margin_bottom = 19.0
size_flags_horizontal = 8
size_flags_vertical = 8
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 3 )
text = "We cant keep running from them forever"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Intro"]
visible = false
margin_left = 8.0
margin_top = -24.0
margin_right = 120.0
margin_bottom = -5.0
size_flags_horizontal = 8
size_flags_vertical = 8
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 3 )
text = "We cant keep running from them forever"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer1" type="AudioStreamPlayer" parent="Intro"]
stream = ExtResource( 5 )
bus = "Actions R"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="Intro"]
stream = ExtResource( 6 )
bus = "Actions R"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="Intro"]
stream = ExtResource( 7 )
volume_db = -80.0
pitch_scale = 0.8
bus = "Music"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Intro/AudioStreamPlayer3"]
anims/default = SubResource( 4 )

[node name="Map" type="Node2D" parent="."]

[node name="Items" type="Node2D" parent="."]

[node name="player_1" parent="." instance=ExtResource( 2 )]
pause_mode = 1
process_priority = 1
z_index = 5
RESOURCES = {
"wood": 0
}

[connection signal="animation_finished" from="CanvasLayer/dark/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
